--- a/dev/scss/sections/_why-NJ.scss
+++ b/dev/scss/sections/_why-NJ.scss
@@ -11,7 +11,7 @@
 
 
     #new-jersey {
-        border: 1px solid red;
+
 
         @include xl{
             grid-area: content-nj;
@@ -30,18 +30,64 @@
 
         #nj-title {
             grid-area: title;
+
+            >section{
+
+                #nj-title-1{
+                    display: flex;
+                    justify-content: center;
+                    >h2{
+                        font-variation-settings: "wght" 600;
+                        font-size: rem-calc(50);
+                        color: $darkblue;
+
+                        margin-top: 24px;
+    
+                    }
+
+                   
+                }
+
+                #nj-title-2{
+                    >h6{
+                        font-variation-settings: "wght" 400;
+                        font-size: rem-calc(24);
+                        color: $darkblue;
+                        text-align: justify;
+                        line-height: 1.3;
+
+                        margin-top: 16px;
+                    }
+                }
+                
+            }
         }
 
         #ig-contain-1 {
             grid-area: photo1;
+
+            padding: 32px 0px 16px 0px;
+
+            
         }
 
         #ig-contain-4 {
             grid-area: photo4;
+            padding-bottom: 32px;
+
         }
 
         #ig-button {
             grid-area: button;
+            >div{
+                display: flex;
+                justify-content: center;
+
+                >button{
+                    padding: 10px 20px;
+                    font-size: rem-calc(24);
+                }
+            }
 
             @include md {
                 display: none;
@@ -51,39 +97,93 @@
         @include md {
 
 
-            grid-template-columns: 50% auto;
+            grid-template-columns: 10% auto auto 10%;
             grid-template-areas:
-                "title title"
-                "photo1 p1"
-                "photo2 photo3"
-                "p2 photo4";
+                ". title title ."
+                "photo1 photo1 p1 ."
+                "photo2 photo2 photo3 photo3"
+                ". p2 photo4 photo4";
 
             #nj-title {
                 grid-area: title;
+                >section{
+
+                    #nj-title-1{
+                        
+                        >h2{
+                            font-size: rem-calc(100);
+                            text-align: center;
+                            line-height: .9;
+                            margin-top: 32px;
+        
+                        }
+    
+                       
+                    }
+    
+                    #nj-title-2{
+                        >h6{
+                            font-variation-settings: "wght" 400;
+                            font-size: rem-calc(32);
+                            color: $darkblue;
+                            text-align: justify;
+                            line-height: 1.3;
+    
+                            margin-top: 16px;
+                        }
+                    }
+                }
+                    
             }
 
             #ig-contain-1 {
                 grid-area: photo1;
+                padding: 48px 0px 32px 0px;
             }
 
             #ig-contain-2 {
                 grid-area: photo2;
+
+                padding-right: 16px;
             }
 
             #ig-p1 {
                 grid-area: p1;
+                font-variation-settings: "wght" 300;
+                font-size: rem-calc(24);
+    
+                    padding: 48px 0px 0px 16px;
+
+                #ig-par1{
+                    text-align: left;
+                }
+
             }
 
             #ig-contain-3 {
                 grid-area: photo3;
+
+                padding-left: 16px;
             }
 
             #ig-p2 {
                 grid-area: p2;
+                font-variation-settings: "wght" 300;
+                font-size: rem-calc(24);
+
+    
+                    padding: 32px 16px 48px 0px;
+                    #ig-par2{
+                        text-align: right;
+                    }
             }
 
             #ig-contain-4 {
                 grid-area: photo4;
+
+
+                padding: 32px 0px 48px 0px;
+    
             }
         }
 
@@ -95,16 +195,50 @@
 
             grid-template-columns: 10% auto 10% 10% auto 10%;
             grid-template-areas:
-                "title title title title title title"
-                "photo1 photo1 p1 p1 p1 p1"
+                ". title title title title ."
+                "photo1 photo1 p1 p1 p1 ."
                 ". photo2 photo2 photo3 photo3 ."
-                "p2 p2 p2 p2 photo4 photo4";
+                ". p2 p2 p2 photo4 photo4";
 
             // question -- so here the grid is mostly working but the paragraphs are not cooperating
 
 
             #nj-title {
                 grid-area: title;
+
+                >section{
+
+                    #nj-title-1{
+                        
+                        >h2{
+
+                            margin-top: 72px;
+
+                            @include xl{
+                                margin-top: 104px;
+                            }
+        
+                        }
+    
+                       
+                    }
+
+                    #nj-title-2{
+                        
+                        >h6{
+
+                            margin-top: 32px;
+
+                            @include xl{
+                                margin-top: 48px;
+                            }
+        
+                        }
+    
+                       
+                    }
+    
+                }
             }
 
             #ig-contain-1 {
